--- a/hanoi.html
+++ b/hanoi.html
@@ -54,8 +54,8 @@
 </tr>
 <button >Start</button> 
 
-<script src="js/Drag.js"></script>        
-<script src="js/hanoi.js"></script>
+<script src="Drag.js"></script>        
+<script src="hanoi.js"></script>
 
 <!--div>
 <div style="background-color:orange;width:200px;height:60px;border-radius:100px/30px;z-index:1"></div>
